--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link
       rel="icon"
@@ -280,16 +280,18 @@
     <!-- main content -->
     <main class="mt-5">
       <section class="hero mb-5">
-        <div class="container">
+        <div class="container-lg">
           <div class="row align-items-center flex-lg-row flex-column-reverse">
             <div class="col-12 col-md-6 hero-text">
-              <h1 class="hero-title fw-bold mb-5">Make remote work</h1>
+              <h1 class="hero-title fw-bold mb-5">
+                <span>Make</span> remote work
+              </h1>
               <p class="hero-description mb-5">
                 Get your team in sync, no matter your location. Streamline your
                 process, create team rituals, and watch productivity soar.
               </p>
               <button class="btn btn-dark mb-5">Learn More</button>
-              <div class="client position-relative mb-5" style="top: 85%">
+              <div class="client position-relative mb-5 mt-5" style="top: 85%">
                 <div class="row">
                   <div class="col-3">
                     <img
@@ -318,7 +320,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-md-6 p-2">
+            <div class="col-12 col-md-6 p-2 hero-image-wraper">
               <div class="hero-image"></div>
             </div>
           </div>
