fix duplicated id

--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
                 <a
                   class="nav-link active dropdown-toggle"
                   href="#"
-                  id="navbarDropdown"
+                  id="featureDropdown"
                   role="button"
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
                 >
                   Features
                 </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <ul class="dropdown-menu" aria-labelledby="featureDropdown">
                   <li>
                     <a class="dropdown-item" href="#"
                       ><img
@@ -106,14 +106,14 @@
                 <a
                   class="nav-link dropdown-toggle"
                   href="#"
-                  id="navbarDropdown"
+                  id="companyDropdown"
                   role="button"
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
                 >
                   Company
                 </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <ul class="dropdown-menu" aria-labelledby="companyDropdown">
                   <li>
                     <a class="dropdown-item" href="#"> History</a>
                   </li>
@@ -175,14 +175,17 @@
                   <a
                     class="nav-link dropdown-toggle"
                     href="#"
-                    id="navbarDropdown"
+                    id="featureDropdownMobile"
                     role="button"
                     data-bs-toggle="dropdown"
                     aria-expanded="false"
                   >
                     Features
                   </a>
-                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <ul
+                    class="dropdown-menu"
+                    aria-labelledby="featureDropdownMobile"
+                  >
                     <li>
                       <a class="dropdown-item" href="#"
                         ><img
@@ -228,14 +231,17 @@
                   <a
                     class="nav-link dropdown-toggle"
                     href="#"
-                    id="navbarDropdown"
+                    id="companyDropdownMobile"
                     role="button"
                     data-bs-toggle="dropdown"
                     aria-expanded="false"
                   >
                     Company
                   </a>
-                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <ul
+                    class="dropdown-menu"
+                    aria-labelledby="companyDropdownMobile"
+                  >
                     <li>
                       <a class="dropdown-item" href="#"> History</a>
                     </li>
